--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <!-- Desktop Navbar Links -->
           <ul id="navlinks-container">
             <li>
-              <a target="_blank" href="./main/about/about.html">About Us</a>
+              <a  href="./main/about/about.html">About Us</a>
             </li>
             <li><a target="_blank" href="./templates/">Free Templates</a></li>
             <li><a target="_blank" href="./components/">Components</a></li>
